[project]
name = "pdf-rag-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "pymupdf4llm>=0.0.27",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]
ignore = []
fixable = ["I001"]
unfixable = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
